fixed vertical alignment of interactive text etc

--- a/discord_themes/project_nova/projectNova_SourrR34.css
+++ b/discord_themes/project_nova/projectNova_SourrR34.css
@@ -770,6 +770,7 @@ img[alt*="wumpus" i]{
     max-width: 30%;
     overflow: hidden;
     text-overflow: ellipsis;
+    vertical-align: middle;
     white-space: pre;
 }
 .interactive:hover{
